# advent_of_code

2022/: adventofcode.cabal
2022/app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
2022/src/: AdventOfCode.hs
2022/src/AdventOfCode/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Grid.hs  Types.hs
2022/tests/: Main.hs
2023/: Makefile  README.md
2023/day_1/: README.md  main.cpp
2023/day_2/: Cargo.toml  README.md  main.rs
2023/day_3/: README.md  main.php
2024/: Makefile  README.md  output.txt
2024/day_1/: main.py
2024/day_2/: main.py
2024/day_3/: main.py
