cabal-version:      3.0
name:               adventofcode
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Jordan E Medlock
maintainer:         jordanemedlock@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    
executable day1
    import:           warnings
    main-is:          Day1.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
    hs-source-dirs:   app
    default-language: GHC2021

executable day2
    import:           warnings
    main-is:          Day2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
    hs-source-dirs:   app
    default-language: GHC2021

executable day3
    import:           warnings
    main-is:          Day3.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
    hs-source-dirs:   app
    default-language: GHC2021

executable day4
    import:           warnings
    main-is:          Day4.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
    hs-source-dirs:   app
    default-language: GHC2021

executable day5
    import:           warnings
    main-is:          Day5.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
    hs-source-dirs:   app
    default-language: GHC2021

executable day6
    import:           warnings
    main-is:          Day6.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
    hs-source-dirs:   app
    default-language: GHC2021

executable day7
    import:           warnings
    main-is:          Day7.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
                    , hspec
                    , unordered-containers
    hs-source-dirs:   app
    default-language: GHC2021

executable day8
    import:           warnings
    main-is:          Day8.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
                    , hspec
                    , unordered-containers
                    , vector
    hs-source-dirs:   app
    default-language: GHC2021

executable day9
    import:           warnings
    main-is:          Day9.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
                    , hspec
                    , unordered-containers
                    , vector
    hs-source-dirs:   app
    default-language: GHC2021

executable day10
    import:           warnings
    main-is:          Day10.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
                    , hspec
                    , unordered-containers
                    , vector
    hs-source-dirs:   app
    default-language: GHC2021

executable day11
    import:           warnings
    main-is:          Day11.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , text
                    , hspec
                    , unordered-containers
                    , vector
    hs-source-dirs:   app
    default-language: GHC2021