cabal-version:      3.0
name:               adventofcode
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Jordan E Medlock
maintainer:         jordanemedlock@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  AdventOfCode
    other-modules:    AdventOfCode.Day1
                    , AdventOfCode.Day2
                    , AdventOfCode.Day3
                    , AdventOfCode.Day4
                    , AdventOfCode.Day5
                    , AdventOfCode.Day6
                    , AdventOfCode.Day7
                    , AdventOfCode.Day8
                    , AdventOfCode.Day9
                    , AdventOfCode.Day10
                    , AdventOfCode.Day11
                    , AdventOfCode.Day12
                    , AdventOfCode.Day13
                    , AdventOfCode.Types
    build-depends:    base >=4.16.3.0
                    , text
                    , hspec
                    , unordered-containers
                    , vector
                    , hashable
                    , heap
                    , astar
                    , parsec
    default-extensions:   QuasiQuotes
                        , OverloadedStrings
    default-language: GHC2021


executable day
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.16.3.0
                    , adventofcode
    hs-source-dirs:   app
    default-language: GHC2021

executable tests
    import:           warnings
    hs-source-dirs:   tests
    main-is:          Main.hs
    build-depends:    base >=4.16.3.0
                    , adventofcode
                    , hspec
    default-language: GHC2021


